app/assets/stylesheets/custom.css
body {
	margin: 0px;
	padding-top: 0px;
	padding-left: 0px;
	background-color: #F2F2F2;
}

.back{
	position: fixed;
	height: 500px;
	width: 100%;
	top: 0;
}

.container {
    width: 900px;
    margin: 0 auto;
    text-align: left;
    position: relative;
}

li.horizontal-scroll-container {
    width: 49.9%;
    text-align: left;
    height: 100%;
    position: relative;
    display: inline-block;
    vertical-align: top;
}

.wrapper {
	background: #42130c;
	min-height: 100%;
	box-shadow: 0 -1px 1px rgba(0, 0, 0, 0.1);
	border-top: 1px solid white;
	margin: 250px 0 0 0;
	z-index: 2;
	position: relative;
	width: 200%;
	-webkit-transition: all .3s ease-out;
	display: block;
	height: 350px;
}

.header-wrapper {
	margin-top: 10px;
}

.login-form{
	position: absolute;
	top: 50px;
	right: 100px;
}

h1.login {
	color: #42130c;
	font-family: 'Open Sans Condensed', sans-serif;
	font-size: 40px;
	margin-bottom: 5px;
}

.footer {
	position: fixed;
	width: 100%;
}

.footer-wrapper {
	margin-top: 10px;
	text-align: center;
	position: relative;
}

.box {
	width: 900px;
    margin: 0 auto;
    text-align: left;
    position: relative;
    height: 100%;
}
 
.box p {
	color:#aaaaaa;
	font-size: 16px;
	line-height:24px;
	padding: 0 0 10px;
}

.right-button {
	position: fixed;
	height: 350px;
	width: 50px;
	top: 251px;
	z-index: 3;
	right: 0;
	background-color: #ffffff;
	opacity:0.1;
	font-size: 50px;
	font-weight: bold;
	text-align: center;
	padding: 160px 0 140px 0;
}

.right-button:hover {
	background-color: #ffffff;
	opacity:0.2;
	text-decoration: none;
}

.left-button {
	position: fixed;
	height: 350px;
	width: 50px;
	top: 251px;
	z-index: 3;
	left: 0;
	background-color: #ffffff;
	opacity:0.1;
	font-size: 50px;
	font-weight: bold;
	text-align: center;
	padding: 160px 0 140px 0;
}

.left-button:hover {
	background-color: #ffffff;
	opacity:0.2;
	text-decoration: none;
}

.dropdown-products-welcome{
	right: 0;
	top: 0;
	position: absolute;
}

.thumbnails{
	height: 80%;
	overflow-y: hidden;
	overflow-x: hidden;
}

.thumbnail{
	margin: 0px 0px 10px 0px;
}

.nano { width: 500px; height: 500px; }
.nano .content { padding: 10px; }
.nano .pane   { background: #888; }
.nano .slider { background: #111; }

